--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,22 @@
 <html>
 
 <head>
-    <title>Losowanie Prezentów wersja 2023!</title>
+    <title>Gift Draw</title>
 </head>
 
 <body>
-    <h1>Losowanie Prezentów</h1>
-    <input type="text" id="name" placeholder="Enter your name">
-    <button onclick="drawName()">Losuj imię</button>
-    <button onclick="resetDrawing()">Reset (tylko dla Admina!)</button>
+    <h1>Gift Draw</h1>
+    <select id="name">
+        <option value="">Select your name</option>
+        <option value="Olek">Olek</option>
+        <option value="Sandra">Sandra</option>
+        <option value="Igor">Igor</option>
+        <option value="Monika">Monika</option>
+        <option value="Ania">Ania</option>
+        <option value="Filip">Filip</option>
+    </select>
+    <button onclick="drawName()">Draw a name</button>
+    <button onclick="resetDrawing()">Reset Drawing</button>
     <p id="result"></p>
     <p id="drawnList"></p>
 
@@ -17,7 +25,7 @@
         function drawName() {
             var name = document.getElementById('name').value;
             if (!name) {
-                document.getElementById('result').innerText = 'Proszę wpisać swoje imię';
+                document.getElementById('result').innerText = 'Please select your name.';
                 return;
             }
             fetch('/draw', {
@@ -32,7 +40,7 @@
                     if (data.error) {
                         document.getElementById('result').innerText = data.error;
                     } else {
-                        document.getElementById('result').innerText = 'Wylosowałeś/aś: ' + data.drawnName;
+                        document.getElementById('result').innerText = 'You drew: ' + data.drawnName;
                         updateDrawnList();
                     }
                 })
